<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:contentDescription="TODO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_remove_24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView"
                style="@style/textViewBottomSheetStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:text="@string/node_size_text"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@id/grid_resizer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

            <SeekBar
                android:id="@+id/grid_resizer"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:max="100"
                android:progress="15"
                android:thumbTint="@color/orange"
                android:progressTint="@color/orange_variant"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <SeekBar
                android:id="@+id/speed_seekbar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:progress="3"
                android:max="50"
                android:thumbTint="@color/orange"
                android:progressTint="@color/orange_variant"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/text_speed"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/grid_resizer"
                app:layout_constraintTop_toBottomOf="@+id/grid_resizer" />

            <TextView
                android:id="@+id/textView2"
                style="@style/textViewBottomSheetStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:fontFamily="serif-monospace"
                android:text="@string/text_animation_speed"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/speed_seekbar"
                app:layout_constraintHorizontal_bias="0.86"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/text_speed"
                style="@style/textViewBottomSheetStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/text_initial_speed"
                app:layout_constraintBottom_toBottomOf="@+id/speed_seekbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/speed_seekbar"
                app:layout_constraintTop_toTopOf="@+id/speed_seekbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
