<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rect_border_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <Spinner
            android:id="@+id/pathfinding_algorithms_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toTopOf="@+id/pathfindingCanvas"
            app:layout_constraintEnd_toStartOf="@+id/random_maze_spinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <View
            android:id="@+id/view6"
            android:layout_width="1dp"
            android:layout_gravity="center_vertical"
            android:layout_height="35dp"
            android:background="@color/orange" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    app:cornerRadius="20dp"
                    app:strokeColor="@color/orange"
                    app:strokeWidth="1dp"
                    app:icon="@drawable/ic_play"
                    android:id="@+id/visualize_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:textSize="12sp"
                    android:text="@string/visualize_btn_text"
                    android:backgroundTint="#4F8E8ACC"/>

                <Button
                    android:id="@+id/clear_path_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    app:cornerRadius="20dp"
                    app:strokeColor="@color/orange"
                    app:strokeWidth="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:textSize="13sp"
                    android:backgroundTint="@color/path_node_color"
                    android:text="@string/clear_path_btn_text" />

                <Button
                    android:id="@+id/clear_all_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:cornerRadius="20dp"
                    app:strokeColor="@color/orange"
                    app:strokeWidth="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:textSize="13sp"
                    android:text="@string/clear_all_btn_text" />

            </LinearLayout>


        </HorizontalScrollView>

        <View
            android:id="@+id/view3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/orange" />

        <Spinner
            android:id="@+id/random_maze_spinner"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:secondaryProgress="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/pathfinding_algorithms_spinner"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/orange" />

        <!--<SeekBar
            android:id="@+id/grid_resize_seekbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="0.5"
            android:max="100"
            android:progress="30"
            android:secondaryProgress="@color/orange"
            tools:visibility="invisible" />-->
<!--
        <View
            android:id="@+id/view5"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/orange"/>-->

        <ImageButton
            android:id="@+id/configBtn"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="?android:selectableItemBackground"
            app:srcCompat="@drawable/ic_config"
            android:contentDescription="TODO" />
    </LinearLayout>
</layout>